hphp/hack/test/typecheck/expression_trees/await_in_splice_conditional.php.exp
ERROR: File "await_in_splice_conditional.php", line 13, characters 34-56:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
